--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -11,3 +11,17 @@
 .article-detail img {
   height: 20rem;
 }
+
+.profile-image {
+  width: 140px;
+  height: 140px;
+  display: grid;
+  place-content: center;
+  overflow: hidden;
+  border-radius: 50%;
+}
+
+.content-center {
+  display: grid;
+  place-items: center;
+}
